# trajectory-prediction

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: normalize.py
src/dataset/: dataloader.py
src/utils/: normalize.py
test/: test_dataloader.py
