[project]
name = "trajectory-prediction"
version = "0.1.0"
description = "Trajectory prediction using different ML techniques on the TrackNetV2 dataset"
authors = [
    {name = "Moamal Fadhil Abdul-Mahdi", email = "moamal001@gmail.com"}
]
dependencies = [
"pandas",
"pytest",
"torch",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"